[package]
name = "hypertube"
version = "0.1.0"
edition = "2024"

[dependencies]
wtransport = "0.7.1"
bytes = { version = "1.11.1", default-features = false }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
futures = { version = "0.3.32", default-features = false, features = ["alloc"]}
